test/cgip/PP/error/instvars/instvars-13.err20
Type error in test case.